tests/ui/lang/consts/nested-ref-in-composite.stderr
error: constant arrays/structs cannot contain pointers to other constants
  --> $DIR/nested-ref-in-composite.rs:20:17
   |
20 |     *pair_out = pair_deep_load(&(&123, &3.14));
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Stack:
           nested_ref_in_composite::main_pair
           main_pair

error: constant arrays/structs cannot contain pointers to other constants
  --> $DIR/nested-ref-in-composite.rs:25:19
   |
25 |     *array3_out = array3_deep_load(&[&0, &1, &2]);
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Stack:
           nested_ref_in_composite::main_array3
           main_array3

error: error:0:0 - No OpEntryPoint instruction was found. This is only allowed if the Linkage capability is being used.
  |
  = note: spirv-val failed
  = note: module `$TEST_BUILD_DIR/lang/consts/nested-ref-in-composite.stage-id.spv.dir/module`

error: aborting due to 3 previous errors

